[gd_scene load_steps=4 format=3 uid="uid://872k1dv2kqqr"]

[ext_resource type="Script" uid="uid://ddy776rrr1g0e" path="res://PulangSandata/Systems/Time/Managers/TimeUI.gd" id="1_4k2qw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k2qw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6rdn"]
bg_color = Color(0.513726, 0.521569, 0.117647, 1)

[node name="TimeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4k2qw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 120.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k2qw")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="DateLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TimeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TimeSpeedButtons" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PauseButton" type="Button" parent="PanelContainer/VBoxContainer/TimeSpeedButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_y6rdn")
toggle_mode = true
action_mode = 0
text = "‚è∏"

[node name="Speed1xButton" type="Button" parent="PanelContainer/VBoxContainer/TimeSpeedButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_y6rdn")
toggle_mode = true
action_mode = 0
text = "1x"

[node name="Speed2xButton" type="Button" parent="PanelContainer/VBoxContainer/TimeSpeedButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_y6rdn")
toggle_mode = true
action_mode = 0
text = "2x"

[node name="Speed4xButton" type="Button" parent="PanelContainer/VBoxContainer/TimeSpeedButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_y6rdn")
toggle_mode = true
action_mode = 0
text = "4x"

[node name="Speed12xButton" type="Button" parent="PanelContainer/VBoxContainer/TimeSpeedButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_y6rdn")
toggle_mode = true
action_mode = 0
text = "12x"

[node name="ResetTimeButton" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetTimeButton" type="Button" parent="PanelContainer/VBoxContainer/ResetTimeButton"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Time"

[connection signal="pressed" from="PanelContainer/VBoxContainer/TimeSpeedButtons/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TimeSpeedButtons/Speed1xButton" to="." method="_on_speed_1x_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TimeSpeedButtons/Speed2xButton" to="." method="_on_speed_2x_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TimeSpeedButtons/Speed4xButton" to="." method="_on_speed_4x_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TimeSpeedButtons/Speed12xButton" to="." method="_on_speed_12x_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ResetTimeButton/ResetTimeButton" to="." method="_on_reset_time_button_pressed"]
